--- a/cases/6_thin_cylindrical_thermal_shield_non_adiabatic/input.yaml
+++ b/cases/6_thin_cylindrical_thermal_shield_non_adiabatic/input.yaml
@@ -28,9 +28,9 @@ models:
 
 mechanical:
   solver: linear
-  linear_solver: iterative_amg # direct_mumps | iterative_amg | iterative_hypre
+  linear_solver: iterative_hypre # direct_mumps | iterative_amg | iterative_hypre
   rtol: 1.0e-6
-  stag_tol: 1.0e-5
+  stag_tol: 1.0e-6
   mechanical_regime: "3D" # 3D | plane_stress
   convergence: rel_norm # rel_norm | norm
   debug: False
