--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Install Sphinx and extensions
         run: |
           pip install --upgrade pip
-          pip install sphinx sphinx_rtd_theme sphinx-autodoc-typehints myst-parser
+          pip install sphinx sphinx_rtd_theme sphinx-autodoc-typehints myst-parser sphinx-book-theme
 
       - name: Build Sphinx HTML
         working-directory: docs
