--- a/.github/workflows/paper.yml
+++ b/.github/workflows/paper.yml
@@ -1,4 +1,4 @@
-name: Build JOSS paper
+name: Build JOSS Paper
 
 on:
   push:
@@ -9,21 +9,22 @@ on:
   pull_request:
 
 jobs:
-  build:
+  paper:
     runs-on: ubuntu-latest
+    name: Build PDF
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Build JOSS paper
-      uses: openjournals/openjournals-docker@v1
-      with:
-        journal: joss
-        paper-path: paper.md
+      - name: Build draft PDF
+        uses: openjournals/openjournals-draft-action@master
+        with:
+          journal: joss
+          paper-path: paper.md
 
-    - name: Upload paper PDF artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: joss-paper
-        path: paper.pdf
+      - name: Upload PDF artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: joss-paper
+          path: paper.pdf
